# plasma-discover

./: .gitignore  CMakeLists.txt  README.en.md  README.md  discover.pro
debian/: changelog  control  discover.postinst  gbp.conf  plasma-discover-backend-flatpak.install  plasma-discover-backend-flatpak.lintian-overrides  plasma-discover-backend-snap.install  plasma-discover-backend-snap.maintscript  plasma-discover-common.install  plasma-discover-common.maintscript  plasma-discover-flatpak-backend.lintian-overrides  plasma-discover-snap-backend.lintian-overrides  plasma-discover.install  plasma-discover.lintian-overrides  plasma-discover.maintscript  rules  watch
debian/source/: lintian-overrides
discover/: CMakeLists.txt  DiscoverDeclarativePlugin.cpp  DiscoverDeclarativePlugin.h  DiscoverObject.cpp  DiscoverObject.h  FeaturedModel.cpp  FeaturedModel.h  PaginateModel.cpp  PaginateModel.h  ReadFile.cpp  ReadFile.h  UnityLauncher.cpp  main.cpp  org.kde.discover.appdata.xml  org.kde.discover.desktop.cmake  resources.qrc
exporter/: MuonExporter.cpp  MuonExporter.h  main.cpp
kcm/: updates.cpp
libdiscover/: ActionsModel.cpp  ActionsModel.h  ApplicationAddonsModel.cpp  ApplicationAddonsModel.h  CMakeLists.txt  DiscoverBackendsFactory.cpp  DiscoverBackendsFactory.h  ScreenshotsModel.cpp  ScreenshotsModel.h  log.h  utils.h
libdiscover/backends/PackageKitBackend/categoryimages/: CMakeLists.txt  categoriesinfo.json
notifier/: BackendNotifierFactory.cpp  DiscoverNotifier.cpp  DiscoverNotifier.h  NotifierItem.cpp  NotifierItem.h  main.cpp
update/: DiscoverUpdate.h
(+188 files in other folders)
